fix(): Spacing in nested menu items

--- a/src/_sass/components/_menu-item.scss
+++ b/src/_sass/components/_menu-item.scss
@@ -32,11 +32,6 @@
       padding-top: 0;
       padding-bottom: 0;
 
-      & > * {
-        padding-top: 3px;
-        padding-bottom: 3px;
-      }
-
       &::before {
         left: 0;
       }
